<resources>
    <string name="app_name">Colic Baby</string>
    <string name="slogan">Happy Baby, Happy Family</string>

    <string name="cikis_btn">EXIT</string>

    <string name="zamanlayici_yazi">Set Timer</string>
    <string name="zamanlayici_ok">OK</string>
    <string name="zamanlayici_no">Cancel</string>
    <string name="tanim">Colic Baby app helps your baby (and you!) to fall asleep using classic monotonous sounds ("white noise") proven to be effective by generations of parent. </string>
    <string name="gizlilik">Privacy Policy</string>
    <string name="iletisim">Contact Us</string>
    <string name="des1">All rights reserved.</string>
    <string name="des2">MOZO YAZILIM</string>
    <string name="content">Content Descryption</string>

    <string name="facebook_app_id">951265818413528</string>
    <string name="fb_login_protocol_scheme">fb951265818413528</string>


</resources>
